# wishlist-service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  env.template  seed.sql
crates/data_provider/: Cargo.toml  seed.sql
crates/data_provider/src/: lib.rs  queries.rs  tables.rs  wishlists.rs
crates/sqlite_provider/: Cargo.toml  seed.sql
crates/sqlite_provider/src/: add_product_to_wishlist.rs  create_wishlist.rs  get_user_wishlists.rs  get_wishlist.rs  lib.rs  queries.rs
crates/wishlist/: Cargo.toml
crates/wishlist/src/: lib.rs
database/: Dockerfile  README.md  init.sql  test-seed.sql
src/: db_provider.rs  main.rs  provider.rs  routes.rs  state.rs  swagger.rs  wishlist.rs  wishlists.rs
src/db_provider/: queries.rs  tables.rs  wishlists.rs
src/routes/: get_wishlist.rs  patch_wishlist.rs  post_wishlist.rs  put_wishlist.rs
