[package]
name = "wishlist-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
serde = { version = "1.0.188", features = ["derive", "rc"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13",features = ["util", "timeout"] }
tower-http = { version = "0.4.4", features = ["add-extension", "trace"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
dotenv = "0.15.0"
