[package]
name = "wishlist-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["tokio", "http2"]}
axum-macros = "0.4.2"
serde = { version = "1.0.214", features = ["derive", "rc"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1",features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
dotenv = "0.15.0"
