[package]
name = "data_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
wishlist = { path = "../wishlist" }
serde = { version = "1.0.188", features = ["derive", "rc"] }
